<resources>
    <string name="app_name">ShopNow</string>

    <!-- Shared Preference -->
    <string name="checkbox">checkbox</string>
    <string name="username">username</string>
    <string name="passwords">password</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_shoppage">shoppage</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop_front">ShopFront</string>
    <string name="title_activity_shopfront">Shopfront</string>


    <string-array name="Clothing">
        <item>Jeans</item>
        <item>T shirt</item>
        <item>Casuals</item>
        <item>Formals</item>
        <item>Caps</item>
    </string-array>


    <string-array name="Electronics">
        <item>Mobile</item>
        <item>Charger</item>
        <item>Earphones</item>
        <item>Headphone</item>
        <item>Hair Dryer</item>
    </string-array>

    <string-array name="Books">
        <item>Novels</item>
        <item>Story</item>
        <item>NCERT</item>
    </string-array>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_placed__order_details">Placed_Order_details</string>

</resources>
