<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_smartphone_black_24dp"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/item_3" />

        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/ic_phone_android_black_24dp"
            android:title="Mobiles" />

        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/ic_laptop_black_24dp"
            android:title="Laptops" />

        <item
            android:id="@+id/nav_item6"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/item_5" />

    </group>

    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/my_orders"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/my_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/my_cart" />

            <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/my_account" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="Logout" />
        </menu>
    </item>


</menu>
